assets/css/style.css
/* ... */
.logo {
    width: 195px;
}

.navbar__wrap {
    display: flex;
    align-items: center;
}

.navbar__list {
    display: flex;
    gap: 26px;
}

.navbar__link {
    font-size: 1.8rem;
    font-weight: 600;
}

.active {
    color: var(--color-green-70);
}

.navbar__link:hover {
    text-decoration: underline;
}

.navbar__wrap-cta {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 137px;
    height: 55px;
    background-color: var(--color-green-75);
    border-radius: 8px;
    margin-left: 40px;
    cursor: pointer;
}

.navbar__wrap-cta:hover {
    opacity: 0.9;
}

.navbar__wrap-btn {
    color: var(--color-absolute-black);
    font-weight: var(--font-weight-semibold);
    font-size: 1.8rem;
    line-height: 1.5;
    color: var(--color-grey-15);
}

.header__hamburger {
    display: none;
    z-index: 1000;
    cursor: pointer;
    width: 34px;
    height: 34px;
}

.navbar__close-btn {
    display: none;
    position: absolute;
    top: 1.5rem;
    right: 1.5rem;
    font-size: 2rem;
    color: white;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.header__overlay {
    display: none;
    opacity: 0;
    visibility: hidden;
    transition:
        opacity 0.3s ease,
        visibility 0.3s ease;
}

#menu-toggle:checked ~ .navbar .header__hamburger {
    display: none;
}

/* Hero */
.hero {
    margin-bottom: 150px;
}

.hero-inner {
    display: flex;
    align-items: center;
    justify-content: center;
}

.hero__img {
    width: 949px;
    height: 832px;
    object-fit: cover;
    border-radius: 0 0 50px;
    margin-left: -162px;
    flex: 1;
}

.hero__content {
    margin-left: 50px;
    width: 47%;
}

.hero__header {
    display: inline-block;
    font-size: 2.8rem;
    font-weight: var(--font-weight-semibold);
    border-bottom: 3px solid var(--color-green-70);
    margin-bottom: 14px;
}

.hero__heading {
    font-size: 5.8rem;
    font-weight: var(--font-weight-bold);
    margin-bottom: 20px;
}

.hero__desc {
    font-size: 1.8rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
    color: var(--color-grey-20);
    margin-bottom: 50px;
}

.hero__btn {
    display: flex;
    margin-bottom: 70px;
}

.hero__btn-left {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 187px;
    height: 59px;
    background-color: var(--color-green-70);
    border-radius: 8px;
    margin-right: 20px;
    font-weight: var(--font-weight-semibold);
    font-size: 1.8rem;
    line-height: 1.5;
    color: var(--color-grey-15);
}

.hero__btn-right {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 187px;
    height: 59px;
    background-color: var(--color-green-95);
    border: 1px solid var(--color-green-85);
    border-radius: 8px;
    font-weight: var(--font-weight-semibold);
    font-size: 1.8rem;
    line-height: 1.5;
    color: var(--color-grey-15);
}

.hero__btn-left:hover,
.hero__btn-right:hover {
    opacity: 0.9;
    cursor: pointer;
}

.btn {
    color: var(--color-grey-15);
    font-weight: var(--font-weight-semibold);
}

.hero__footer {
    display: flex;
    align-items: center;
}

.hero__footer-customers {
    display: flex;
    padding: 8px 10px;
    border: 1px solid var(--color-green-70);
    border-radius: 58px;
    margin-right: 8px;
}

.hero__footer-img {
    width: 50px;
    height: 50px;
    object-fit: cover;
}

.hero__footer-img + .hero__footer-img {
    margin-left: -20px;
}

.hero__footer-desc {
    font-size: 2rem;
    font-weight: var(--font-weight-semibold);
    color: var(--color-dark-green-20);
}

.hero__footer-highlight {
    color: var(--color-dark-green-40);
}

/* Features */
.feature {
    margin-bottom: 177px;
}

.feature__header {
    text-align: center;
    margin-bottom: 80px;
}

.feature__header-title {
    font-size: 4.8rem;
    color: var(--color-grey-15);
    font-weight: var(--font-weight-bold);
    line-height: 1.5;
}

.feature__header-desc {
    font-size: 1.8rem;
    color: var(--color-grey-20);
    font-weight: var(--font-weight-medium);
    line-height: 1.5;
}

.feature__cards {
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
}

.feature__card {
    width: calc((100% - 30px) / 2);
    padding: 40px 50px;
    background-color: var(--color-green-95);
    border-radius: 12px;
    border: 1px solid var(--color-green-85);
}

.feature__card:hover {
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
}

.feature__card-header {
    display: flex;
    align-items: center;
    margin-bottom: 24px;
}

.feature__card-logo {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 68px;
    height: 68px;
    background-color: var(--color-green-70);
    border-radius: 8px;
    margin-right: 14px;
}

.feature__card-title {
    font-size: 2.4rem;
    color: var(--color-grey-15);
    font-weight: var(--font-weight-semibold);
    line-height: 1.5;
}

.feature__card-desc {
    font-size: 1.8rem;
    line-height: 1.5;
    color: var(--color-grey-20);
}

/* Blog */
.blog {
    margin-bottom: 150px;
}

.blog__header {
    text-align: center;
    width: 996px;
    margin: 0 auto;
    margin-bottom: 80px;
}

.blog__header-title {
    font-size: 4.8rem;
    font-weight: var(--font-weight-bold);
    line-height: 1.5;
    color: var(--color-grey-15);
    margin-bottom: 10px;
}

.blog__header-desc {
    font-size: 1.8rem;
    font-weight: var(--font-weight-medium);
    line-height: 1.5;
    color: var(--color-grey-20);
}

.blog__cards {
    display: flex;
    justify-content: center;
    gap: 30px;
    flex-wrap: wrap;
}

.blog__card {
    width: calc((100% - 30px) / 2);
    background-color: var(--color-green-95);
    padding: 40px;
    border-radius: 12px;
}

.blog__card:hover {
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
}

.blog__card-image {
    border-radius: 12px;
    width: 100%;
    height: 428px;
    overflow: hidden;
    margin-bottom: 40px;
}
/* ... */

